# xmpp_pubsub

./: Cargo.toml  README.md
examples/: payload.xml
src/: constants.rs  errors.rs  lib.rs  parser.rs
src/elements/: field.rs  mod.rs
